betting app front/assets/sass/layout/_header.scss
.app-header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	height: 10vh;
	padding: 0 2rem;
	background-color: $p2;
}

.header-nav a {
	margin: 0 1rem;
	text-decoration: none;
    color: $color-white;
    font-size: 1.6rem;
}

.header-nav a:hover {
	color: $n5;
}

.app-header .nav-btn {
	padding: 5px;
	cursor: pointer;
	background: transparent;
	border: none;
	outline: none;
    color: $color-white;
	visibility: hidden;
	opacity: 0;
	font-size: 1.8rem;
}

.app-header div,
.header-nav {
	display: flex;
	align-items: center;
}

@media only screen and (max-width: 1024px) {
	.app-header .nav-btn {
		visibility: visible;
		opacity: 1;
	}

	.app-header .header-nav {
		position: fixed;
		top: -100vh;
		left: 0;
		height: 100%;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 1.5rem;
		background-color: $p2;
		transition: 1s;
	}

	.app-header .responsive_nav {
		transform: translateY(100vh);
	}

	.header-nav .nav-close-btn {
		position: absolute;
		top: 2rem;
		right: 2rem;
	}

	.header-nav a {
		font-size: 1.5rem;
	}
}

